# NSU-CPP

./: .gitignore  README.md
Lab0/: CMakeLists.txt  main.cpp
Lab0/Lab0A/: main.cpp
Lab0/Lab0B/: CMakeLists.txt  The-C-Programming-Language-Special-3rd-Edition.csv  The-C-Programming-Language-Special-3rd-Edition.txt  The-Master-and-Margarita.csv  WordStat.cpp  WordStat.h  WordStatistic.cpp  WordStatistic.h  input.txt  main.cpp
Lab1/: CMakeLists.txt  list.h  listException.h  listGoogleTests.cpp
Lab2/: CMakeLists.txt  CalcText.txt  Calculator.cpp  Context.h  Exceptions.h  Operation.h  OperationFactory.h  OperationInterface.h  OperationMaker.h  main.cpp
Lab2/Operations/: Define.cpp  Div.cpp  Mul.cpp  Pop.cpp  Print.cpp  Push.cpp  Sqrt.cpp  Sub.cpp  Sum.cpp
Lab3/: CMakeLists.txt  README.md
Lab3/snake/: controler.cpp  main.cpp  obstacleMap.h  view.cpp
Lab3/src/: backGround.cpp  backGround.h  bot.cpp  bot.h  controller.cpp  controller.h  drawer.cpp  drawer.h  game.cpp  game.h  gameModel.cpp  gameModel.h  global_parameters.h  human.cpp  human.h  main.cpp  menu.cpp  menu.h  observer.h  obstacleMap.cpp  obstacleMap.h  player.cpp  player.h  settings.cpp  settings.h  test.cpp  view.cpp  view.h  wall.cpp  wall.h
